feat: merging oneOf/anyOf (#56)